# TrabalhoCG

./: CMakeLists.txt  CMakeLists.txt.user.bf1a99b  README.md
arquivos/: planta.xcf
shaders/: .gamef.glsl.swp  gamef.glsl  gamev.glsl  noNormalf.glsl  noNormalv.glsl  textureFrag.glsl  textureVert.glsl  texturef.glsl  texturev.glsl
src/: Engine.cpp  Engine.h  main.cpp
src/game/: BezierTest.cpp  BezierTest.h  ChoosenMesh.cpp  ChoosenMesh.cpp.autosave  ChoosenMesh.h  Cylinder.cpp  Cylinder.h  FinalGame.cpp  FinalGame.h  Game.cpp  Game.h  GameInput.cpp  GameInput.h  MontanhaRussa.cpp  MontanhaRussa.h
src/graphics/: .Mesh.cpp.swp  Bezier.cpp  Bezier.h  Camera.cpp  Camera.h  CatRoll.cpp  CatRoll.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Mesh (Cópia em conflito de qxd-desk 2015-04-08).h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h  Sphere.cpp  Sphere.h  Spline.cpp  Spline.h  SysGraphics.cpp  SysGraphics.h  TexMesh.cpp  TexMesh.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/input/: sysInput.cpp  sysInput.h
src/interfaces/: iGame.h  iSpline.h
src/objects/: Arrow.cpp  Arrow.h  Box.cpp  Box.h  CoordinateArrows.cpp  CoordinateArrows.h  Grid.cpp  Grid.h  Quarto.cpp  Quarto.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  TexBox.cpp  TexBox.h
src/utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
